--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ author:
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
-  googlescholar    : # "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
+  googlescholar    : "https://scholar.google.com/citations?view_op=list_works&hl=zh-CN&authuser=2&hl=zh-CN&user=EDTdhqAAAAAJ&authuser=2"
   impactstory      : # URL
   orcid            : "https://orcid.org/0009-0009-6909-8759"
   semantic         : # URL
