--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "profile.png"
   name             : "Haodong Zhang"
   pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
+  bio              : " Passionate about solving complex challenges through innovative solutions and collaboration. Interested in using artificial intelligence to solve different problems."
   location         : "Suzhou, CHINA."
   employer         : "School of Software, NPU"
   uri              : # URL
